# ProGitForProgrammers

./: .gitignore  CMakeLists.txt  LICENSE
include/: book.h  calculator.h  movie.h
src/: book.cpp  calculator.cpp  main.cpp  movie.cpp
